# rex

./: 3  :w  Cargo.toml  Untitled  Y.rx  \  a.rx  add.rx  bools.rx  builtin.rx  error.rx  expr.rx  hello.rx  main.rx  map.rx  never.rx  one_neq_zero.rx  rec_eq_problem.rx  string.rx  t  t.rx  temp.rx  test.rx  test2.rx  test3.rx  test_func.rx  test_remove_obvious_ty  test_remove_obvious_ty.rx  unit_eq_unit.rx
expr/: Cargo.toml  defs.txt
expr-lsp/: Cargo.toml
expr-lsp/src/: main.rs
expr/ideas/: function_encoded_type_system.txt
expr/src/: context.rs  desugar.rs  eval.rs  experimental.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  sea_nodes.rs
rex/: BOOTSTRAP.txt  Cargo.toml  README.md  README.txt  Untitled  defs.txt  history.txt
rex-core/: Cargo.toml
rex-core/src/: lib.rs
rex-lsp/: Cargo.toml
rex-lsp/src/: completion.rs  document_highlight.rs  helper.rs  hover.rs  lib.rs  main.rs  semantic_tokens.rs  spans.txt  update.rs
rex-parser/: Cargo.toml
rex-parser/src/: lexer.rs  (+4 more)
rex/ideas/: bootstrapping  name_problem  register
rex/src/: autoconvert.rs  bootstrap.rs  cache.rs  data.rs  def.rs  desugar.rs  eval.rs  experimental.rs  helper.rs  lexer.rs  lib.rs  lower.rs  main.rs  nbe.rs  parser.rs  pipeline.rs  repl.rs  sea_nodes.rs  tools.rs  type.rs  zipper.rs
rex/src/data/: ast.rs  expr.rs  tokens.rs
rex/src/desugar/: compile.rs  type.rs
rex/src/experimental/: context.rs  infer_ty.rs  lower.rs
rex/src/pipeline/: desugar.rs  lexer.rs  name_resolver.rs  parser.rs
rex/src/tools/: printer.rs
rex/versions/: info.txt  v0.1.0  v0.1.1  v0.1.2  v0.1.3
(+1 files in other folders)
